[package]
name = "rustos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "image_maker",
]

[dependencies]
bootloader = { version = "*" } # replace this with a version number


[package.metadata.bootloader]
map_physical_memory = true
physical-memory-offset = "0x0000_0000_0000_0000"
map_page_table_recursively = true
recursive_index = 511
kernel_stack_size = 0x0001_0000