[package]
name = "rustos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "image_maker",
]

[dependencies]
bootloader = { version = "0.10.12" } # replace this with a version number
volatile = "0.4.5"
lazy_static ={ version = "1.4.0", features = ["spin_no_std"]}
spin = "0.9.4"

# [package.metadata.bootloader]
# map-physical-memory = true
# physical-memory-offset = "0x0000_0000_0000_0000"
# map-page-table-recursively = true
# recursive-index = 511
# kernel-stack-size = 0x0001_0000