[package]
name = "rustos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.dev]
# panic = "abort"

[profile.release]
# panic = "abort"
lto = false
debug = true
overflow-checks = true

[workspace]
members = [
    "image_maker",
]

[dependencies]
bootloader = { version = "0.10.12" } # replace this with a version number
# bootloader = {git = "https://github.com/rust-osdev/bootloader.git", tag = "v0.11.0-alpha.0"}
volatile = "0.4.5"
lazy_static ={ version = "1.4.0", features = ["spin_no_std"]}
conquer-once  = {version = "0.3.2", default-features = false}
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
spin = { version = "0.9.4", features = ["lazy"] }
noto-sans-mono-bitmap = {version = "0.1.5", default-features = false, features = ["regular", "size_16"]}
pic8259 = "0.10.2"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.10.1"


[package.metadata.bootloader]
map-physical-memory = true
physical-memory-offset = "0x0000_4000_0000_0000"  # default value: 0xS0000_0180_0000_0000
# map-page-table-recursively = true
# recursive-index = 511
kernel-stack-size = 0x000a_0000